tests/errors/semantics/unassignable_expression/unassignable_in_increment.c
// Expression is not assignable
void main()
{
	10++;
}
